// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App404 redirecting should work correctly 1`] = `
<div
  class="font-regular font-non-jp"
>
  <p>
    business-card-404-text-1
  </p>
  <p>
    <span
      class="blinker-prefix"
    />
     
    business-card-404-text-2
    <span
      style="display: none;"
    >
      .
    </span>
    <span
      class="blinker"
      style="display: inline;"
    >
      _
    </span>
  </p>
  <p
    style="display: none;"
  >
    business-card-404-text-3
    <span>
      3
    </span>
    <span
      class="blinker"
    >
      _
    </span>
  </p>
</div>
`;

exports[`App404 should render App404 with gb locale correctly 1`] = `
<div
  class="font-regular font-non-jp"
>
  <p>
    business-card-404-text-1
  </p>
  <p>
    <span
      class="blinker-prefix"
    />
     
    business-card-404-text-2
    <span
      style="display: none;"
    >
      .
    </span>
    <span
      class="blinker"
      style="display: inline;"
    >
      _
    </span>
  </p>
  <p
    style="display: none;"
  >
    business-card-404-text-3
    <span>
      3
    </span>
    <span
      class="blinker"
    >
      _
    </span>
  </p>
</div>
`;

exports[`App404 should render App404 with jp locale correctly 1`] = `
<div
  class="font-regular font-jp"
>
  <p>
    business-card-404-text-1
  </p>
  <p>
    <span
      class="blinker-prefix"
    />
     
    business-card-404-text-2
    <span
      style="display: none;"
    >
      .
    </span>
    <span
      class="blinker"
      style="display: inline;"
    >
      _
    </span>
  </p>
  <p
    style="display: none;"
  >
    business-card-404-text-3
    <span>
      3
    </span>
    <span
      class="blinker"
    >
      _
    </span>
  </p>
</div>
`;
